@@ -1,5 +1,12 @@
 2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Move "bad wait if SIGCHLD ignored" check to configure.in.
+
+	* configure.in: Add check for `wait' that handles ignored SIGCHLD.
+	(BAD_WAIT_IF_SIGCHLD_IGNORED): New AC_DEFINE_UNQUOTED.
+
+2010-03-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Move mmap-related checks to configure.in.
 
 	* configure.in: Add checks for mmap-related quirks.
